added new table - archive_tasks and funck with it

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,21 +1,25 @@
-28.03:
-- JobQueue не инициализирован, таймер не запущен
-- если используетсся неверный формат даты - бот об этом пишет, но далее ничего не происходит. Надо сделать, чтобы он вновь предложил выбрать дату
-под уже запомнившееся задание. ОН СЛОВНО НЕВЕРНО СЧИТЫВАЕТ ДАТУ. И ВЫДАЕТ ОШИБКУ. 
-В ЛЮБОМ СЛУЧАЕ - ОБРАБОТКА НЕПРАВИЛЬНОЙ ДАТЫ - НУЖНА
-
-
-
 - Все задачи, у которых истек срок - должны отправляться в БД в таблицу "arhive_tasks", и удаляться из базы user_tasks.
-
 
 - разместить бота на серваке
 - разместить базу на серваке.
 
 
-1) Если после добавления задачи, в течении 5 минут, пользователь не добавляет новые задачи, то надпись с кнопками "Задача добавлена" заменяется на надпись "Выберите действие"
+- Когда бот пишет напоминание о задаче он рисует кнопки: "Закрыть задачу" и "Перенести срок".
+- Если юзер выбирает "Закрыть задачу" - то задача из таблицы user_tasks переносится в таблицу arhive_tasks
+ -> создать таблицу (Postgres) с полями taks_id(берется из таблицы user_tasks), user_id(из таблицы user_info), task(текст задачи - берется из таблицы user_tasks), 
+ task_closed_date(время закрытия задачи - берется из таблицы user_tasks)
+ - Если юзер выбирает "Перенести срок" - то бот предлагает ввести новую дату. После этого, значени в поле deadline в таблице user_tasks меняется на дату, которую ввел юзер.
 
 
 Итоговая идея:
 - пользователь покупает подписку. Вводит свой номер телефона. И на выбор (в смс или звонком) ему прилетает оповещение о важном мероприятии.
 что-то вроде тг секретаршы.
+
+
+1 - закрываю сразу
+3, 4 - переношу, потом закрываю
+5 - переношу 2 раза, потом закрываю
+
+В какой-то момент, кнопки с выбором действия - не удаляются. - надо разобраться. в чате бота должно всегда оставаться только одно меню для выбора
+
+в таблице arhive_tasks колонка PK integer id - не нужно. потому что не понятно, как там будет происходить инкремент при большом количество пользователей
