--- a/TODO.txt
+++ b/TODO.txt
@@ -1,25 +1,16 @@
-- Все задачи, у которых истек срок - должны отправляться в БД в таблицу "arhive_tasks", и удаляться из базы user_tasks.
+1) таблице arhive_tasks колонка PK integer id - не нужно. потому что не понятно, как там будет происходить инкремент при большом количество пользователей
+2) лишнием меню и кнопки:
+- Всегда должно оставаться только 1 меню.
+- при переносе задачи: - должно выводится только сообщение, без кнопок. Сообщение должно исчезать через 3 секунды.
+
+
+
 
 - разместить бота на серваке
 - разместить базу на серваке.
-
-
-- Когда бот пишет напоминание о задаче он рисует кнопки: "Закрыть задачу" и "Перенести срок".
-- Если юзер выбирает "Закрыть задачу" - то задача из таблицы user_tasks переносится в таблицу arhive_tasks
- -> создать таблицу (Postgres) с полями taks_id(берется из таблицы user_tasks), user_id(из таблицы user_info), task(текст задачи - берется из таблицы user_tasks), 
- task_closed_date(время закрытия задачи - берется из таблицы user_tasks)
- - Если юзер выбирает "Перенести срок" - то бот предлагает ввести новую дату. После этого, значени в поле deadline в таблице user_tasks меняется на дату, которую ввел юзер.
-
-
 Итоговая идея:
 - пользователь покупает подписку. Вводит свой номер телефона. И на выбор (в смс или звонком) ему прилетает оповещение о важном мероприятии.
 что-то вроде тг секретаршы.
 
 
-1 - закрываю сразу
-3, 4 - переношу, потом закрываю
-5 - переношу 2 раза, потом закрываю
-
-В какой-то момент, кнопки с выбором действия - не удаляются. - надо разобраться. в чате бота должно всегда оставаться только одно меню для выбора
-
-в таблице arhive_tasks колонка PK integer id - не нужно. потому что не понятно, как там будет происходить инкремент при большом количество пользователей
+что будет если я буду находится во вкладке "мои задачи", а в этом время - отработает шедулер? - меня с твоими задачами остается. надо поправить
