Ready to change buttons

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,16 +1,34 @@
-1) таблице arhive_tasks колонка PK integer id - не нужно. потому что не понятно, как там будет происходить инкремент при большом количество пользователей
-2) лишнием меню и кнопки:
-- Всегда должно оставаться только 1 меню.
-- при переносе задачи: - должно выводится только сообщение, без кнопок. Сообщение должно исчезать через 3 секунды.
-
-
-
 
 - разместить бота на серваке
 - разместить базу на серваке.
 Итоговая идея:
 - пользователь покупает подписку. Вводит свой номер телефона. И на выбор (в смс или звонком) ему прилетает оповещение о важном мероприятии.
 что-то вроде тг секретаршы.
+
+
+Реструктурируем кнопки и сообщения.
+СОЗДАНИЕ И ПРОСМОТР ЗАДАЧ
+1) При нажатии /start, если юзер зарегистрирован, бот пишет, что пользователь уже зарегистрирован (текст не меняется), но вместо кнопок в самом чате,
+ внизу чата появляются кнопки действий - "Добавить задачу" и "Мои Задачи". 
+2) Если пользователь не зарегистрирован - то бот его регистрирует по уже написанному сценарию. Меняется лишь то, что кнопки появляются не в окне чата, 
+а внизу чата - "Добавить задачу" и "Мои Задачи"
+В любом из двух вариантов, если у юзера нет задач, а он нажимает на кнопку "Мои Задачи" - Бот выводит сообщение "Нет текущих задач".
+3) После 3х секунд, сообщение "Нет текущих задач" удаляется из чата.
+
+ПЕРЕНОС И ЗАКРЫТИЕ ЗАДАЧ
+1) Когда подходит время оповестить пользователя о задаче, срок которой наступил, Бот присылает в чат уведомление (текст не меняется), и под уведомлением кнопки
+с переносом времени задач или закрытием задачи.
+2) Если юзер выбирает "закрыть задачу" - задача переносится в таблицу archive_tasks, А бот присылает уведомление "Задача закрыта"  - как было и ранее
+3) Если юзер выбирает "перенести задачу" - то бот предлагает выбрать новое время (как было и раньше) и после ввода времени - срок задачи сдвигается, а 
+бот присылает сообщение "срок задачи изменен"
+4) В любом варианте, после закрытия или переноса срока задачи, все кнопки из чата удаляются, и остаются только постоянные кнопки по чатом "Добавить задачу" и "Мои Задачи"
+
+
+
+
+
+
+
 
 
 что будет если я буду находится во вкладке "мои задачи", а в этом время - отработает шедулер? - меня с твоими задачами остается. надо поправить
