--- a/TODO.txt
+++ b/TODO.txt
@@ -1,4 +1,6 @@
 
+1) проверить, что удаление юзера - работает. Удалить юзера можно всегда, всего задачи и задачи в архиве - также удаляются.
+
 - разместить бота на серваке
 - разместить базу на серваке.
 Итоговая идея:
@@ -6,7 +8,7 @@
 что-то вроде тг секретаршы.
 
 
-Реструктурируем кнопки и сообщения.
+Реструктурируем кнопки и сообщения. - ПРОВЕРИИТЬ!
 СОЗДАНИЕ И ПРОСМОТР ЗАДАЧ
 1) При нажатии /start, если юзер зарегистрирован, бот пишет, что пользователь уже зарегистрирован (текст не меняется), но вместо кнопок в самом чате,
  внизу чата появляются кнопки действий - "Добавить задачу" и "Мои Задачи". 
@@ -24,11 +26,13 @@
 4) В любом варианте, после закрытия или переноса срока задачи, все кнопки из чата удаляются, и остаются только постоянные кнопки по чатом "Добавить задачу" и "Мои Задачи"
 
 
-
-
-
-
-
+- После того как юзер нажимает "Мои задачи" бот высылает список задач. Это сообщение в чате удаляется после 2 минут бездействия пользователя, 
+либо после того, как пользователь снова нажмет на "Мои задачи" - тогда бот присылает актуальный список задач.
+- Донастроить удаление всех сообщений.
 
 
 что будет если я буду находится во вкладке "мои задачи", а в этом время - отработает шедулер? - меня с твоими задачами остается. надо поправить
+
+
+ИСПОЛЬЗУЕМ ЭТУ ШТУКУ:
+pip install "python-telegram-bot[job-queue]" --upgrade
