Бот не меняет собщение после текста "Задача добавлена" И не очищает временные данные.

--- a/TODO.txt
+++ b/TODO.txt
@@ -24,9 +24,11 @@
 4) В любом варианте, после закрытия или переноса срока задачи, все кнопки из чата удаляются, и остаются только постоянные кнопки по чатом "Добавить задачу" и "Мои Задачи"
 
 
+1) Задача <описание задачи> добавлено
+2)Задача <описание задачи с датой <дата>> добавлено
 
 
-
+Когда бот пишет, что задача добавлена  - такое сообщение и остается висеть, с главными кнопками.
 
 
 
