При закрытии задачи - аткже не меняется текст и кнопки

--- a/TODO.txt
+++ b/TODO.txt
@@ -26,11 +26,11 @@
 
 1) Задача <описание задачи> добавлено
 2)Задача <описание задачи с датой <дата>> добавлено
-
-
 Когда бот пишет, что задача добавлена  - такое сообщение и остается висеть, с главными кнопками.
 
+Проблема/непонятка.
 
+Когда подошел срок Напомнить о задаче, вызывается 
 
 
 что будет если я буду находится во вкладке "мои задачи", а в этом время - отработает шедулер? - меня с твоими задачами остается. надо поправить
