удалил замену сообщений на основное меню.

--- a/TODO.txt
+++ b/TODO.txt
@@ -28,9 +28,10 @@
 2)Задача <описание задачи с датой <дата>> добавлено
 Когда бот пишет, что задача добавлена  - такое сообщение и остается висеть, с главными кнопками.
 
-Проблема/непонятка.
 
-Когда подошел срок Напомнить о задаче, вызывается 
+
+Приоритет:
+1)Проверки дедлайнов - в отдельном модуле.
 
 
 что будет если я буду находится во вкладке "мои задачи", а в этом время - отработает шедулер? - меня с твоими задачами остается. надо поправить
