все работает, только лишние кнопки

--- a/TODO.txt
+++ b/TODO.txt
@@ -28,10 +28,19 @@
 2)Задача <описание задачи с датой <дата>> добавлено
 Когда бот пишет, что задача добавлена  - такое сообщение и остается висеть, с главными кнопками.
 
+Проверки при каждом изменении:
+1) Проверка на создание нового юзера. - новый юзер создается -V
+2) Проверка на мои задачи когда их нет -  пишет "нет задач", кнопка "обратно в меню", кнопки "создать" и "мои задачи" -V
+3) Проверка, что пользователь зарегистрирован. - V
+4) Проверка на создание задач без даты - 3 задачи, 2 друг за другом, одну - минуты через 2. V
+5) Проверка на создание задачи с переносом А. Создаем 2 задачи. Одну переносим 3 раза с коротким промежутком, другую - с промежутком > 10 минут. V
+6) !!! Проверка на создание задачи с переносом Б. Перенос задачи "1" - не создает задачу "2", а лишь меняет ее дедлайн. - V
+7) Провека на корректное закрытие задачи. - Задачи действительно удаляются и переносятся в таблицу archive_tasks - V
+8) Проверка на то, что чат бот не имеет лишних кнопок - FAILED
+9) Проверка на то, что пока юзер находится в режиме Мои задачи, и происходит какое-то событие/напоминание - ничего не ломается и не создается ничего нового.
+10) !!! Проверка на то, что если юзер пишет в чат - просто текстом что-либо - не считая команд который начинаются с / - Бот ничего не отвечает. - V
 
 
-Приоритет:
-1)Проверки дедлайнов - в отдельном модуле.
-
-
-что будет если я буду находится во вкладке "мои задачи", а в этом время - отработает шедулер? - меня с твоими задачами остается. надо поправить
+31.03. Первоочередные правки:
+1) !!! Проверка на создание задачи с переносом Б. Перенос задачи "1" - не создает задачу "2", а лишь меняет ее дедлайн. - FAILED
+2) !!! Проверка на то, что если юзер пишет в чат - просто текстом что-либо - не считая команд который начинаются с / - Бот ничего не отвечает. - FAILED
