Рабочая версия с недочетами

--- a/TODO.txt
+++ b/TODO.txt
@@ -39,8 +39,14 @@
 8) Проверка на то, что чат бот не имеет лишних кнопок - FAILED
 9) Проверка на то, что пока юзер находится в режиме Мои задачи, и происходит какое-то событие/напоминание - ничего не ломается и не создается ничего нового.
 10) !!! Проверка на то, что если юзер пишет в чат - просто текстом что-либо - не считая команд который начинаются с / - Бот ничего не отвечает. - V
+11) Когда я возвращаюсь в меню, и бот пишет "выбери действие", а потом приходит уведомление - то все ОК. - V
+12) Когда я нахожусь в процессе описания задачи, и бот присылает уведомление - 
+
+01/04:
+- после слова "задача" бота добавляет <описание задачи>
+- перенастроить базу на удаление юзера, чтобы не важно было, есть у него задачи или нет.
 
 
-31.03. Первоочередные правки:
-1) !!! Проверка на создание задачи с переносом Б. Перенос задачи "1" - не создает задачу "2", а лишь меняет ее дедлайн. - FAILED
-2) !!! Проверка на то, что если юзер пишет в чат - просто текстом что-либо - не считая команд который начинаются с / - Бот ничего не отвечает. - FAILED
+Сейчас, когда юзер находится в процессе описания задачи, после нажатия на кнопку "Добавить задачу", а бот в этот момент присылает уведомление,
+задача, которую писал юзер - перетирается на уведомление от бота. 
+Как нужно: 
