Новый рабочий вариант

--- a/TODO.txt
+++ b/TODO.txt
@@ -34,19 +34,34 @@
 3) Проверка, что пользователь зарегистрирован. - V
 4) Проверка на создание задач без даты - 3 задачи, 2 друг за другом, одну - минуты через 2. V
 5) Проверка на создание задачи с переносом А. Создаем 2 задачи. Одну переносим 3 раза с коротким промежутком, другую - с промежутком > 10 минут. V
-6) !!! Проверка на создание задачи с переносом Б. Перенос задачи "1" - не создает задачу "2", а лишь меняет ее дедлайн. - V
-7) Провека на корректное закрытие задачи. - Задачи действительно удаляются и переносятся в таблицу archive_tasks - V
-8) Проверка на то, что чат бот не имеет лишних кнопок - FAILED
-9) Проверка на то, что пока юзер находится в режиме Мои задачи, и происходит какое-то событие/напоминание - ничего не ломается и не создается ничего нового.
-10) !!! Проверка на то, что если юзер пишет в чат - просто текстом что-либо - не считая команд который начинаются с / - Бот ничего не отвечает. - V
-11) Когда я возвращаюсь в меню, и бот пишет "выбери действие", а потом приходит уведомление - то все ОК. - V
-12) Когда я нахожусь в процессе описания задачи, и бот присылает уведомление - 
+6) Проверка на то, что пока юзер находится в режиме Мои задачи, и происходит какое-то событие/напоминание - ничего не ломается и не создается ничего нового. - V
+7) Когда я нахожусь в процессе описания задачи, и бот присылает уведомление - паралельные процессы не конфликтуют. Сперва присылает текст с напоминанием
+без кнопок, потом записывается новая задача, потом приходит снова напоминание, но уже с кнопками. Проверяем с новой задачей с Датой и без Даты. - FAILED
+8) !!! Проверка на создание задачи с переносом Б. Перенос задачи "1" - не создает задачу "2", а лишь меняет ее дедлайн. - V
 
-01/04:
+
+9) создаю 2 задачи со временем. когда подходит срок 1й задачи - нажимаю "обратно в меню". Получаю "выбери действие". Когда подходит новое напоминание - оно 
+перетирает "выбери действие". -V
+10) Проверка на то, что чат бот не имеет лишних кнопок - V (нужно только убрать дополнительное меню при повторном нажатии /start)
+11) Провека на корректное закрытие задачи. - Задачи действительно удаляются и переносятся в таблицу archive_tasks - V
+12) !!! Проверка на то, что если юзер пишет в чат - просто текстом что-либо - не считая команд который начинаются с / - Бот ничего не отвечает. - V
+
+
+Новая проблема, когда происходит накладывание новой задачи и напоминание о другой задаче - бот не спрашивает, нужно ли мне установить время.
+- Настроить паралельную работу новой задачи с напоминанием. После того как юзер пишет новую задачу, бот не сразу ее добавляет и напоминает о старой, а сначала спрашивает
+нужно ли поставить напоминание или нет. Если не нужно - бот пишет, что задача добавлена, и напоминает про старую + кнопки. Если нужно напоминание, бот сначала
+записывает дату для напоминания, а потом уже пишет, что задача добавлена, и напоминает про старую + кнопки.
+
+02/04:
+- Настроить паралельную работу новой задачи с напоминанием. После того как юзер пишет новую задачу, бот не сразу ее добавляет и напоминает о старой, а сначала спрашивает
+нужно ли поставить напоминание или нет. Если не нужно - бот пишет, что задача добавлена, и напоминает про старую + кнопки. Если нужно напоминание, бот сначала
+записывает дату для напоминания, а потом уже пишет, что задача добавлена, и напоминает про старую + кнопки.
 - после слова "задача" бота добавляет <описание задачи>
 - перенастроить базу на удаление юзера, чтобы не важно было, есть у него задачи или нет.
+- добавить в таблицу архив boolean колонку "is_closed", чтобы понимать - закрыта задача или нет. Задача которая была не закрыта/не перенесена, или юезр вернулся в меню
+при сообщении от бота про напоминание - будет перенесена в архив, в колонку is_closed с флагом false. Задача которая была закрыта - получит флаг true.
+- после регистрации, если есть какие-то уведомления от бота, а потом юзер вновь пишет /start - старые уведомления от бота с кнопками удаляются.
+- что будет если у двух задач стоит одинаковое время?
 
 
-Сейчас, когда юзер находится в процессе описания задачи, после нажатия на кнопку "Добавить задачу", а бот в этот момент присылает уведомление,
-задача, которую писал юзер - перетирается на уведомление от бота. 
-Как нужно: 
+
