Рабочая версия + TODO

--- a/TODO.txt
+++ b/TODO.txt
@@ -53,6 +53,10 @@
 записывает дату для напоминания, а потом уже пишет, что задача добавлена, и напоминает про старую + кнопки.
 
 02/04:
+- отлавливать ошибку, если юзер не зареган, и нажимает старую кнопку и получается ошибка:
+"ForeignKeyViolation: ОШИБКА:  INSERT или UPDATE в таблице "user_tasks" нарушает ограничение внешнего ключа "user_tasks_user_id_fkey"    
+DETAIL:  Ключ (user_id)=(782243896) отсутствует в таблице "user_info"".
+
 - Настроить паралельную работу новой задачи с напоминанием. После того как юзер пишет новую задачу, бот не сразу ее добавляет и напоминает о старой, а сначала спрашивает
 нужно ли поставить напоминание или нет. Если не нужно - бот пишет, что задача добавлена, и напоминает про старую + кнопки. Если нужно напоминание, бот сначала
 записывает дату для напоминания, а потом уже пишет, что задача добавлена, и напоминает про старую + кнопки.
